fixes the spacing on navbar Co-Authors: Casey Cerrito, Kirk Snyder

--- a/src/components/NavBar/nav.css
+++ b/src/components/NavBar/nav.css
@@ -6,9 +6,10 @@
   height: 64px;
 }
 
-/* .logo-container {
-
-} */
+.logo-container {
+  width: 40%;
+  margin-top: -0.5rem;
+}
 
 .hrf-logo {
   width: 20rem;
@@ -17,10 +18,18 @@
 .menu {
   background: #2f54eb;
   padding-top: 1rem;
+  width: 40%;
+  margin-top: -0.3rem;
+  height: 64px;
+  border-bottom: none !important;
 }
 
 .menu-link {
   color: white !important;
+}
+
+.menu-link:hover {
+  border-bottom: 1px solid white !important;
 }
 
 .NavbarItems {
